# gcp2-playbox

./: .gitignore  README.md  analyze_2025_anomalies.py  gcp2-testdata-cumsum.py  netvar_Heartfulness_Institute_Event_Rollin_2.csv  run.sh
1/: README.md
experiments/2-correlations/: GoogleSpreadsheetNotes.txt  README.md  gcp2.net_netvar_top10_last10.csv
experiments/3-hurst-exponent/: README.md
experiments/4-rolling-windows/: README.md  gcp_egg_web_app.py  requirements.txt
experiments/6-finance-correlations/: GCP_Finance_ChatGPT_Summary.md  Makefile  README.md  config.yaml.example  gcp_experiments_portal.py  gcp_finance_analysis.py  get_prices.py  holmberg_dashboard.py  main.py  pyproject.toml  requirements.txt  run.sh  test_alpaca.py  test_gcp_system.py
experiments/6-finance-correlations/app/: __init__.py  config.py
experiments/6-finance-correlations/app/core/: __init__.py  buffers.py  maxz.py  methods.py  predict.py  tracker.py
experiments/6-finance-correlations/app/data/: __init__.py  backtest.py  gcp_collector.py  market_collector.py
experiments/6-finance-correlations/app/simulators/: __init__.py
experiments/6-finance-correlations/app/utils/: logging.py  retry.py
experiments/6-finance-correlations/app/web/: dashboard.py  server.py
experiments/6-finance-correlations/app/web/assets/: buttons.css
experiments/6-finance-correlations/tests/: test_buffers.py  test_gcp_parser.py  test_maxz.py  test_predictor.py
gcp2.net-rng-data-downloaded/: CONTEXT.md  gcp2_api_client.py  gcp2_bulk_download.py  gcp2_data_provider.py  gcp2_holmberg_analysis.py  progress.json
(+33 files in other folders)
